--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
 
-  <body onload="main()">
+  <body>
     <div id="container">
       <div id="modal_outer">
         <div id="modal_mid">
