--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <script src="./js/three.min.js"></script>
     <script src="./js/jquery.min.js"></script>
-    <script src="./js/key.js"></script>
+    <script defer src="./js/key.js"></script>
+    <script defer src="./js/functions.js"></script>
 
     <link rel="stylesheet" href="./css/main.css" />
   </head>
