--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script src="./js/three.min.js"></script>
     <script src="./js/jquery.min.js"></script>
-    <script src="./js/key.js"></script>
+    <script defer src="./js/key.js"></script>
 
     <link rel="stylesheet" href="./css/main.css" />
   </head>
@@ -48,7 +48,7 @@
 
           <div id="key_shapes">
             <div id="svg">
-              <img src="./img/key_shapes.svg" />
+              <img src="./images/key_shapes.svg" />
             </div>
             <p>
               The head shape may vary. The keyway shape is what matters, but
@@ -179,7 +179,7 @@
           </div>
           <div id="align"></div>
           <img src="#" id="photo" class="hide" />
-          <canvas src="#" id="photoc" class="hide"></canvas>
+          <canvas width="0" height="0" id="photoc" class="hide"></canvas>
           <div id="align_tools2">
             <div>
               Zoom:
