--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8" />
     <title>Key Code From Photograph</title>
 
-    <script src="./js/utils/three.min.js"></script>
-    <!-- <script src="./js/utils/jquery.min.js"></script> -->
+    <script src="./js/three.min.js"></script>
     <script type="module" src="./js/index.js"></script>
 
     <link rel="stylesheet" href="./css/main.css" />
