fixed help button

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               id="manip_free_xfrm"
             />
             <label for="manip_free_xfrm"> free xfrm </label> &nbsp;
-            <button onclick="help()">?</button>&nbsp;
+            <button id="help">?</button>&nbsp;
           </div>
           <div id="align"></div>
           <img src="#" id="photo" class="hide" />
