key.js good enough

--- a/index.html
+++ b/index.html
@@ -154,29 +154,29 @@
               id="manip_viewport"
               checked
             />
-            <label for="manip_viewport"> zoom/pan </label> &ensp;
+            <label for="manip_viewport"> zoom/pan </label>
             <input
               type="radio"
               name="manip_mouse"
               value="move"
               id="manip_move"
             />
-            <label for="manip_move"> move </label> &nbsp;
+            <label for="manip_move"> move </label>
             <input
               type="radio"
               name="manip_mouse"
               value="rotate_scale"
               id="manip_rotate_scale"
             />
-            <label for="manip_rotate_scale"> rotate/scale </label> &nbsp;
+            <label for="manip_rotate_scale"> rotate/scale </label>
             <input
               type="radio"
               name="manip_mouse"
               value="free_xfrm"
               id="manip_free_xfrm"
             />
-            <label for="manip_free_xfrm"> free xfrm </label> &nbsp;
-            <button id="help">?</button>&nbsp;
+            <label for="manip_free_xfrm"> free xfrm </label> 
+            <button id="help">?</button>
           </div>
           <div id="align"></div>
           <img src="#" id="photo" class="hide" />
@@ -184,11 +184,11 @@
           <div id="align_tools2">
             <div>
               Zoom:
-              <button id="zoomIn">In</button>&nbsp;
-              <button id="zoomOut">Out</button>&nbsp;
+              <button id="zoomIn">In</button>
+              <button id="zoomOut">Out</button>
             </div>
             <button id="fit">Fit</button>
-            <button id="mirror">Mirror</button> &nbsp;
+            <button id="mirror">Mirror</button> 
             <button id="reset">Reset</button>
           </div>
         </div>
