--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
                         <input id="bitting_spacings" type="text" placeholder="in" />
                     </div>
 
-                    <small>inches, comma-separated list, in same order as code (usually bow to
-            tip)</small
+                    <small>Comma separated list, in same order as code (usually bow to tip)</small
           >
           </p>
 
